# 3dvr-agent

./: .gitignore  README.md  README.md.new  package-lock.json  package.json  pyproject.toml
3dvr_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
brain/: 3dvr.md
scripts/: ask  ask-flow
self_yolo/: cli.py  self_yolo_agent.py
test/: cli.test.js  outreach-log.test.js  outreach-message.test.js
thomas-agent/: leads.csv
thomas-agent/brain/: 3dvr.md
thomas-agent/node/: autopilot.js  gun-db.js  gun-open-outreach-artifact.js  inbox-monitor-loop.js  inbox-monitor.js  lead-crawl.js  lead-enrich.js  send-outreach-email.js
thomas-agent/scripts/: 3dvr  ask-artifact  ask-autopilot  ask-autopilot-daemon  ask-crawl  ask-enrich  ask-followup  ask-inbox-daemon  ask-leads  ask-message  ask-next  ask-personalize  ask-post  ask-reply  ask-run  ask-sales  ask-send  ask-status  ask-track
thomas-agent/scripts/lib/: platform.sh
