[project]
name = "3dvr-agent"
version = "0.1.0"
description = "Local self-improving AI dev tool"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
self-yolo = "self_yolo.cli:main"
yolo-app = "self_yolo.yolo_app:main"
yolo-new-site = "self_yolo.yolo_new_site:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
